Se agrega index y modifica transicion de menus

--- a/Ej1-1.html
+++ b/Ej1-1.html
@@ -9,14 +9,14 @@
 	<script src="js/modernizr-2.0.6.min.js" type="text/javascript"></script> 
 </HEAD>
 <BODY>
-	<div id="c_general"><div class="animated fadeInDownBig">
-		<div id="c_enc"><div style="height:50%"><br><h1>Bienvenido</h1></div>
+	<div id="c_general"><div clss="animated fadeInDownBig">
+		<div id="c_eyp"><div style="height:50%"><br><h1>Bienvenido</h1></div>
 			<div id="container" style="width: 600px; margin: 0px auto 0;">
 				<!-- begin navigation -->
 				<nav id="navigation">
 					<ul>
-						<li><a href="Ej1-1.html">Inicio</a></li>
-						<li><a href="#">Servicios</a></li>
+						<li><a href="index.html">Inicio</a></li>
+						<li><a href="Ej1-1.html">Ventas</a></li>
 						<li><a href="#">Compras</a></li>
 						<li><a href="#">Sobre nosotros</a></li>
 						<li><a href="#">Blog</a></li>
@@ -28,8 +28,7 @@
 		</div>
 		<div id="c_tres">
 			<div id="c_columna"></div>
-			<div id="c_form">
-				<h1 class="la">HOLA</h1>
+			<div id="c_form" class="animated fadeInRightBig">
 				<FORM method="post" action="Ej1-2.php">
 					<br><br>Tipo de vivienda
 					<select name="viv">
@@ -73,7 +72,7 @@
 			<div id="c_columna"></div>
 		</div>
 
-		<div id="c_pie"><h1>Adios</h1></div>
+		<div id="c_eyp" class="animated fadeInDown"><h1>Adios</h1></div>
 	<div></div>
 </BODY>
 </HTML>
