Se corrige sintaxis nula

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="js/modernizr-2.0.6.min.js" type="text/javascript"></script> 
 </HEAD>
 <BODY>
-	<div id="c_general"><div clss="animated fadeInDownBig">
+	<div id="c_general">
 		<div id="c_eyp"><div style="height:50%"><br><h1>Bienvenido</h1></div>
 			<div id="container" style="width: 600px; margin: 0px auto 0;">
 				<!-- begin navigation -->
@@ -29,7 +29,7 @@
 		<div id="c_hola"><br><br><br><br>
 			<h1 class="animated tada1" style="text-size:250%;">Inmobiliaria Ametrano</h1>
 		</div>
-		<div id="c_eyp"><h1>Adios</h1></div>
+		<div id="c_eyp"><h1>Adios</h1>
 	<div></div>
 </BODY>
 </HTML>
