--- a/Ej1-1.html
+++ b/Ej1-1.html
@@ -9,7 +9,7 @@
 	<script src="js/modernizr-2.0.6.min.js" type="text/javascript"></script> 
 </HEAD>
 <BODY>
-	<div id="c_general"><div clss="animated fadeInDownBig">
+	<div id="c_general">
 		<div id="c_eyp"><div style="height:50%"><br><h1>Bienvenido</h1></div>
 			<div id="container" style="width: 600px; margin: 0px auto 0;">
 				<!-- begin navigation -->
@@ -69,7 +69,7 @@
 					<input type="submit" value="Ingresar vivienda">
 				</FORM>
 			</div>
-			<div id="c_columna"></div>
+			<div id="c_columna">
 		</div>
 
 		<div id="c_eyp" class="animated fadeInDown"><h1>Adios</h1></div>
